sumo/tests/traci/ChangeVehicleValue/ChangeRouteByID/InvalidRouteId/testclient_out.traci
TraCITestClient output file. Date: Mon Oct 11 16:34:13 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=196 varID=83 objID=veh0
.. Answered with error to command (196), [description: The route 'xxx' is not known.]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
